# recomo

./: .env.example  .gitignore  README.md  __init__.py  demo.ipynb  overview.md  pyproject.toml  requirements.txt  run_demo.py  schema.md  trace_schema.py
adapters/: __init__.py  inspect_ai.py
checker/: __init__.py  coherence_tracker.py  drift_detector.py
demo/: __init__.py  __main__.py  agent_adapter.py  interactive.py  live_session.py  real_agent_chain.py  run_demo.py  traces.py
demo/scenarios/: __init__.py  coherent_no_nudge.json  procurement_nudge.json  schema.py
docs/: architecture.md
extractor/: __init__.py  claim_extractor.py  prompts.py
graph/: __init__.py  relational_graph.py
recomo/tui/: __init__.py  __main__.py  app.py
simulator/: __init__.py  runner.py
tests/: __init__.py  test_simulator.py
viz/: __init__.py  demo_output.json  export_demo.py  index.html  script.js  style.css
